# research_system

./: .env.example  .gitignore  README.md  pyproject.toml  research.db  research_21-08-2025.db  run_bertopic_enhanced.bat
debug/core/: 1755699875_core_b8c1c50754c8ed0119f23daf4410256c_off0_lim5.json  1755699876_core_81a595e7cab5f085f6f54a405c33a1d5_off2_lim3.json  1755700150_core_37face988bd738c2e5b9e5485439a354_off0_lim100.json  1755700151_core_e5ba88327b593e72b250122e40ab319c_off45_lim55.json
src/: __init__.py  app.py  app_streamlit.py  bertopic_train.py  cli.py  config.py  db.py  extraction_config.py  llm.py  models.py  normalize_extractions.py  orchestrator.py  services.py
src/db/: __init__.py  db.py  models.py
src/evaluators/: __init__.py  lmstudio.py
src/extractors/: langextract_adapter.py  utils.py
src/sources/: __init__.py  arxiv_source.py  core_source.py  source.py
