[project]
name = "research-system"
version = "0.1.0"
description = "AI-driven academic papers research-system"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "arxiv>=2.0.0",
    "requests>=2.31.0",
    "pymupdf4llm>=0.0.17",
    "python-dotenv>=1.0.0",
    "langextract>=0.1.0",
    "bertopic>=0.16.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.4",
    "hdbscan>=0.8.33",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "spacy>=3.7.0",
    "google-generativeai>=0.3.0",
    "absl-py>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]