[project]
name = "research-system"
version = "0.1.0"
description = "AI-driven academic papers research-system"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "arxiv>=2.0.0",
    "requests>=2.31.0",
    "pymupdf4llm>=0.0.17",
    "python-dotenv>=1.0.0",
    "langextract>=0.1.0",
    "pandas>=2.0.0",
    "google-generativeai>=0.3.0",
    "absl-py>=2.0.0",
    "streamlit>=1.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]